--- a/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
@@ -16,20 +16,9 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/collaboration">
-                <span class="oi oi-globe" aria-hidden="true"></span> Colaboración
+                <span class="oi oi-globe" aria-hidden="true"></span> Demanda Colaborada
             </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/collaborationTest">
-                <span class="oi oi-globe" aria-hidden="true"></span> Colaboración Test
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/CollaborativeDemand/collaborationDetail">
-                <span class="oi oi-globe" aria-hidden="true"></span> Detail
-            </NavLink>
-        </div>
+        </div>       
 
         <AuthorizeView Roles="Planner">
             <div class="nav-item px-3">
