--- a/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
@@ -80,6 +80,11 @@
                     <span class="oi oi-people" aria-hidden="true"></span> Usuarios
                 </NavLink>
             </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="/internalroles">
+                    <span class="oi oi-people" aria-hidden="true"></span> Roles
+                </NavLink>
+            </div>
         </AuthorizeView>        
     </nav>
 </div>
