--- a/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
@@ -85,6 +85,11 @@
                     <span class="oi oi-people" aria-hidden="true"></span> Roles
                 </NavLink>
             </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="/collaborationCalendars">
+                    <span class="oi oi-people" aria-hidden="true"></span> Calendario de Colaboración
+                </NavLink>
+            </div>
         </AuthorizeView>        
     </nav>
 </div>
