--- a/WaCollaborative/WaCollaborative.Frontend/_Imports.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/_Imports.razor
@@ -24,3 +24,5 @@
 @using WaCollaborative.Frontend.Pages.Auth
 @using WaCollaborative.Frontend.Helpers
 @using MudBlazor
+@using WaCollaborative.Frontend.Pages.PortfolioCustomers
+@using WaCollaborative.Frontend.Pages.PortfolioCustomerProducts
