--- a/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
@@ -90,6 +90,11 @@
                     <span class="oi oi-people" aria-hidden="true"></span> Calendario de Colaboración
                 </NavLink>
             </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="/portfolios">
+                    <span class="oi oi-people" aria-hidden="true"></span> Portafolio
+                </NavLink>
+            </div>
         </AuthorizeView>        
     </nav>
 </div>
