--- a/WaCollaborative/WaCollaborative.Frontend/Pages/CollaborativeDemand/CollaborativeDemandIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/CollaborativeDemand/CollaborativeDemandIndex.razor
@@ -3,7 +3,8 @@
 @inject IRepository repository
 @inject NavigationManager navigationManager
 @inject SweetAlertService sweetAlertService
-@* @using System.Collections.Generic *@
+@inject IJSRuntime JSRuntime
+@inject ExcelExporter ExcelExporter
 
 @attribute [Authorize(Roles = "Planner,Collaborator")]
 
@@ -13,66 +14,77 @@
 }
 else
 {
-    <div class="card">
-        <div class="card-header">
-            <span>
-                <i class="oi oi-dollar" /> Demanda Collaborativa
-            </span>
-        </div>
-        <div class="card-body">
-            <MudDataGrid T="CollaborativeDemandDTO" MultiSelection="true" Items="@CollaborativeDemands"
-                         SortMode="SortMode.Multiple" Filterable="true"
-                         ReadOnly="@_isReadOnly" EditMode="@(_isCellEditMode ? DataGridEditMode.Cell : DataGridEditMode.Form)"
-                         StartedEditingItem="@StartedEditingItem" CanceledEditingItem="@CanceledEditingItem" CommittedItemChanges="@CommittedItemChanges"
-                         Bordered="true" Dense="true" EditTrigger="@(_editTriggerRowClick ? DataGridEditTrigger.OnRowClick : DataGridEditTrigger.Manual)"
-                         Hideable="true">
-                <ToolBarContent>             
-                    <MudSpacer />
-                    <MudTextField Placeholder="Search" Adornment="Adornment.Start" Immediate="true"
-                                  AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
-                </ToolBarContent>
-                <Columns>
-                    <SelectColumn T="CollaborativeDemandDTO" />
-                    <PropertyColumn Property="x => x.CollaborativeDemandId" IsEditable="false" Hidden />
-                     <PropertyColumn Property="x => x.CollaborativeDemandDetailId" IsEditable="false" Hidden />                     
-                     <PropertyColumn Property="x => x.CustomerName" IsEditable="false" Title="Cliente" />
-                     <PropertyColumn Property="x => x.CityName" IsEditable="false" Title="Ciudad" />
-                     <PropertyColumn Property="x => x.DistributionChannel" IsEditable="false" Title="Canal Distribución" />
-                     <PropertyColumn Property="x => x.ShippingPointName" IsEditable="false" Title="Punto de Envío" />                     
-                     <PropertyColumn Property="x => x.ProductName" IsEditable="false" Title="Producto" />
-                     <PropertyColumn Property="x => x.YearMonth" IsEditable="false" Title="Año-Mes" />
-                     <PropertyColumn Property="x => x.Quantity" IsEditable="true" Title="Colaboración" Format="N2" Culture="@(new CultureInfo("en-US"))">
-                     </PropertyColumn> />                    
-                 </Columns>
-                 <PagerContent>
-                     <MudDataGridPager T="CollaborativeDemandDTO" />
-                 </PagerContent>
-             </MudDataGrid>
-             <div class="d-flex flex-wrap mt-4">
-                 <div class="d-flex justify-start align-center">
+    <div class="container-fluid">
+        <div class="card">
+            <div class="card-header">
+                <span>
+                    <i class="oi oi-people" /> Demanda Collaborativa
+                </span>
+            </div>
+            <div class="card-body">
+                <MudDataGrid T="CollaborativeDemandDTO" MultiSelection="true" Items="@CollaborativeDemands"
+                             SortMode="SortMode.Multiple" Filterable="true"
+                             ReadOnly="@_isReadOnly" EditMode="@(_isCellEditMode ? DataGridEditMode.Cell : DataGridEditMode.Form)"
+                             StartedEditingItem="@StartedEditingItem" CanceledEditingItem="@CanceledEditingItem" CommittedItemChanges="@CommittedItemChanges"
+                             Bordered="true" Dense="true" EditTrigger="@(_editTriggerRowClick ? DataGridEditTrigger.OnRowClick : DataGridEditTrigger.Manual)"
+                             Hideable="true">
+                    <ToolBarContent>
+                        <MudButton OnClick="ExportarExcel">Exportar a Excel</MudButton>
+                        @if (!string.IsNullOrEmpty(FileDownLoadName))
+                        {
+                            <a href="@navigationManager.ToAbsoluteUri($"Downloads/{FileDownLoadName}")" target="_blank" download>Descargar archivo</a>
+                            @* <a href="@($"{navigationManager.BaseUri}Downloads/{FileDownLoadName}")" target="_blank" download>Descargar archivo</a> *@
 
-                     <MudSwitch @bind-Checked="@_isCellEditMode">Cell</MudSwitch>
+                            <p>Ruta generada: @FileDownloadUrl</p>
+
+                        }
+                        <MudSpacer />
+                        <MudTextField Placeholder="Buscar" Adornment="Adornment.Start" Immediate="true"
+                                      AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+                    </ToolBarContent>
+                    <Columns>
+                        <SelectColumn T="CollaborativeDemandDTO" />
+                        <PropertyColumn Property="x => x.CollaborativeDemandId" IsEditable="false" Hidden />
+                         <PropertyColumn Property="x => x.CollaborativeDemandDetailId" IsEditable="false" Hidden />
+                         <PropertyColumn Property="x => x.CustomerName" IsEditable="false" Title="Cliente" Class="mud-col-lg-6 mud-col-md-8" />
+                         <PropertyColumn Property="x => x.CityName" IsEditable="false" Title="Ciudad" Class="mud-col-lg-6 mud-col-md-8" />
+                         <PropertyColumn Property="x => x.DistributionChannel" IsEditable="false" Title="Canal Distribución" Class="mud-col-lg-6 mud-col-md-8" />
+                         <PropertyColumn Property="x => x.ShippingPointName" IsEditable="false" Title="Punto de Envío" Class="mud-col-lg-6 mud-col-md-8" />
+                         <PropertyColumn Property="x => x.ProductName" IsEditable="false" Title="Producto" Class="mud-col-lg-6 mud-col-md-8" />
+                         <PropertyColumn Property="x => x.YearMonth" IsEditable="false" Title="Año-Mes" Class="mud-col-lg-6 mud-col-md-8" />
+                         <PropertyColumn Property="x => x.Quantity" IsEditable="true" Title="Colaboración" Format="N2" Culture="@(new CultureInfo("en-US"))" Class="mud-col-lg-6 mud-col-md-8">
+                         </PropertyColumn> />
+                     </Columns>
+                     <PagerContent>
+                         <MudDataGridPager T="CollaborativeDemandDTO" />
+                     </PagerContent>
+                 </MudDataGrid>
+                 <div class="d-flex flex-wrap mt-4">
+                     <div class="d-flex justify-start align-center">
+
+                         <MudSwitch @bind-Checked="@_isCellEditMode">Cell</MudSwitch>
+                     </div>
+                     <div class="d-flex justify-start align-center">
+                         <p class="mud-typography mud-typography-body1 mud-inherit-text mr-2">Manual</p>
+                         <MudSwitch @bind-Checked="@_editTriggerRowClick">On Row Click</MudSwitch>
+                     </div>
                  </div>
-                 <div class="d-flex justify-start align-center">
-                     <p class="mud-typography mud-typography-body1 mud-inherit-text mr-2">Manual</p>
-                     <MudSwitch @bind-Checked="@_editTriggerRowClick">On Row Click</MudSwitch>
-                 </div>
-             </div>
-             <MudExpansionPanels Style="flex:1">
-                 <MudExpansionPanel Text="Show Events">
-                     @foreach (var message in _events)
-                    {
-                        <MudText Typo="@Typo.body2">@message</MudText>
-                    }
-                    @if (_events.Count > 0)
-                    {
-                        <div class="d-flex">
-                            <MudSpacer />
-                            <MudButton Class="mt-3" ButtonType="ButtonType.Button" Variant="Variant.Filled" OnClick="@(() => _events.Clear())">Clear</MudButton>
-                        </div>
-                    }
-                </MudExpansionPanel>
-            </MudExpansionPanels>
+                 <MudExpansionPanels Style="flex:1">
+                     <MudExpansionPanel Text="Show Events">
+                         @foreach (var message in _events)
+                        {
+                            <MudText Typo="@Typo.body2">@message</MudText>
+                        }
+                        @if (_events.Count > 0)
+                        {
+                            <div class="d-flex">
+                                <MudSpacer />
+                                <MudButton Class="mt-3" ButtonType="ButtonType.Button" Variant="Variant.Filled" OnClick="@(() => _events.Clear())">Clear</MudButton>
+                            </div>
+                        }
+                    </MudExpansionPanel>
+                </MudExpansionPanels>
+            </div>
         </div>
     </div>
 }
@@ -86,6 +98,9 @@ else
     private bool _isReadOnly = false;
     private bool _isCellEditMode = true;
     private bool _editTriggerRowClick;
+    string FileDownLoadName = "";
+    string FileDownloadUrl;
+
     private List<string> _events = new();
 
     public List<CollaborativeDemandDTO>? CollaborativeDemands { get; set; }
@@ -176,21 +191,21 @@ else
 
     async Task CommittedItemChanges(CollaborativeDemandDTO item)
     {
-        _events.Insert(0, $"Event = CommittedItemChanges, Data = {System.Text.Json.JsonSerializer.Serialize(item)}"); 
-        
-        if (!EsDecimalOEntero(item.Quantity))
-        {
-            // Mostrar mensaje de error o manejar la situación de validación fallida
-            await sweetAlertService.FireAsync("Error", "El valor de colaboración no es un número decimal o entero válido.", SweetAlertIcon.Error);
-            return;
-        }
+        _events.Insert(0, $"Event = CommittedItemChanges, Data = {System.Text.Json.JsonSerializer.Serialize(item)}");
+
+        // if (!EsDecimalOEntero(item.Quantity))
+        // {
+        //     // Mostrar mensaje de error o manejar la situación de validación fallida
+        //     await sweetAlertService.FireAsync("Error", "El valor de colaboración no es un número decimal o entero válido.", SweetAlertIcon.Error);
+        //     return;
+        // }
 
         var collaboration = new CollaborativeDemandComponentsDetail
             {
                 Id = item.CollaborativeDemandDetailId,
-                Quantity = item.Quantity,                
-                CollaborativeDemandId =  item.Id
-                
+                Quantity = item.Quantity,
+                CollaborativeDemandId = item.Id
+
             };
 
         var responseHTTP = await repository.PutAsync("api/CollaborativeDemandComponentsDetail/full", collaboration);
@@ -216,6 +231,75 @@ else
         // Utiliza el tipo decimal directamente para la validación
         return decimal.Truncate(cantidad) == cantidad;
     }
-    
-}
 
+    // public class Persona
+    // {
+    //     public string Nombre { get; set; }
+    //     public int Edad { get; set; }
+    //     public string CorreoElectronico { get; set; }
+    // }
+
+    // En tu método ExportToExcel
+    //     List<Persona> datosDePrueba = new List<Persona>
+    // {
+    //     new Persona { Nombre = "Juan Pérez", Edad = 30, CorreoElectronico = "juan@example.com" },
+    //     new Persona { Nombre = "María López", Edad = 25, CorreoElectronico = "maria@example.com" },
+    //     new Persona { Nombre = "Carlos Rodríguez", Edad = 40, CorreoElectronico = "carlos@example.com" }
+    // };
+
+    // async Task ExportarExcel()
+    // {
+    //     FileDownLoadName = $"MiArchivo_{DateTime.Now:yyyyMMddHHmmss}.xlsx";
+    //     // FileDownLoadName = $"MiArchivo_20231113144934.xlsx";
+    //     ExcelExporter.ExportToExcel(CollaborativeDemands!, FileDownLoadName);
+
+    //     // ExcelExporter.ExportToExcel(datosDePrueba, FileDownLoadName);
+    //     FileDownloadUrl = navigationManager.ToAbsoluteUri($"Downloads/{FileDownLoadName}").ToString();
+
+    //     await JSRuntime.InvokeVoidAsync("alert", "Datos exportados a Excel exitosamente!");
+    // }
+
+    //navigationManager.NavigateTo("/download");
+    private async Task ExportarExcel()
+    {
+        int page = 1;
+        try
+        {
+            var url = $"api/CollaborativeDemand/ExcelGenerate?page={page}";
+            var response = await repository.GetAsync<List<CollaborativeDemandDTO>>(url);
+            
+
+            if (!response.Error)
+            {
+                var resp = response.Response;
+                // Obtener la ruta del archivo desde la respuesta del backend
+                var result = resp;//await resp.Content.ReadFromJsonAsync<ExcelResponse>();
+
+                // Construir la URL de descarga
+                // var downloadUrl = $"{navigationManager.BaseUri}{result.ExcelLink}";
+
+                // Iniciar la descarga del archivo
+                // await jsRuntime.InvokeVoidAsync("open", downloadUrl, "_blank");
+            }
+            else
+            {
+                // Manejar el caso en que la solicitud no fue exitosa
+                // Puedes mostrar un mensaje de error al usuario, por ejemplo.
+                // var errorMessage = await response.Content.ReadAsStringAsync();
+                // MostrarMensajeDeError(errorMessage);
+            }
+        }
+        catch (Exception ex)
+        {
+            // Manejar las excepciones
+            // Puedes mostrar un mensaje de error al usuario, por ejemplo.
+            // MostrarMensajeDeError("Ocurrió un error al exportar a Excel: " + ex.Message);
+        }
+    }
+
+    private class ExcelResponse
+    {
+        public string ExcelLink { get; set; }
+    }
+}
+}
