--- a/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
@@ -16,7 +16,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/collaboration">
-                <span class="oi oi-globe" aria-hidden="true"></span> Demanda Colaborada
+                <span class="oi oi-people" aria-hidden="true"></span> Demanda Colaborada
             </NavLink>
         </div>       
 
