--- a/WaCollaborative/WaCollaborative.Frontend/Pages/PortfolioProducts/PortfolioProductEdit.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/PortfolioProducts/PortfolioProductEdit.razor
@@ -1,33 +1,33 @@
-﻿@page "/portfoliocustomerproducts/edit/{PortfolioCustomerProductsId:int}"
+﻿@page "/portfolioproducts/edit/{PortfolioProductId:int}"
 @attribute [Authorize(Roles = "Planner")]
 @inject NavigationManager navigationManager
 @inject IRepository repository
 @inject SweetAlertService sweetAlertService
 
-<h3>Editar Producto</h3>
+<h4>Cambiar producto del portafolio</h4>
 
-@if (portfolioCustomerProduct is null)
+@if (portfolioProduct is null)
 {
     <Loading />
 }
 else
 {
-    <PortfolioCustomerProductForm @ref="portfolioCustomerProductForm" PortfolioCustomerProduct="portfolioCustomerProduct" OnValidSubmit="SaveAsync" ReturnAction="Return" />
+    <PortfolioProductForm @ref="portfolioProductForm" PortfolioProduct="portfolioProduct" OnValidSubmit="SaveAsync" ReturnAction="Return" />
 }
 
 @code {
-    private PortfolioCustomerProduct? portfolioCustomerProduct;
-    private PortfolioCustomerProductForm? portfolioCustomerProductForm;
+    private PortfolioProduct? portfolioProduct;
+    private PortfolioProductForm? portfolioProductForm;
 
     [CascadingParameter]
     BlazoredModalInstance BlazoredModal { get; set; } = default!;
 
     [Parameter]
-    public int PortfolioCustomerProductId { get; set; }
+    public int PortfolioProductId { get; set; }
 
     protected override async Task OnParametersSetAsync()
     {
-        var response = await repository.GetAsync<PortfolioCustomerProduct>($"/api/portfoliocustomerproducts/{PortfolioCustomerProductId}");
+        var response = await repository.GetAsync<PortfolioProduct>($"/api/portfolioproducts/{PortfolioProductId}");
         if (response.Error)
         {
             if (response.HttpResponseMessage.StatusCode == HttpStatusCode.NotFound)
@@ -38,12 +38,12 @@ else
             await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
             return;
         }
-        portfolioCustomerProduct = response.Response;
+        portfolioProduct = response.Response;
     }
 
     private async Task SaveAsync()
     {
-        var response = await repository.PutAsync($"/api/portfoliocustomerproducts", portfolioCustomerProduct);
+        var response = await repository.PutAsync($"/api/portfolioproducts", portfolioProduct);
         if (response.Error)
         {
             var message = await response.GetErrorMessageAsync();
@@ -66,7 +66,7 @@ else
 
     private void Return()
     {
-        portfolioCustomerProductForm!.FormPostedSuccessfully = true;
-        navigationManager.NavigateTo($"/portfoliocustomers/details/{portfolioCustomerProduct!.PortfolioCustomerId}");
+        portfolioProductForm!.FormPostedSuccessfully = true;
+        navigationManager.NavigateTo($"/portfolios/productdetails/{portfolioProduct!.PortfolioId}");
     }
 }
