--- a/WaCollaborative/WaCollaborative.Frontend/_Imports.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/_Imports.razor
@@ -25,4 +25,4 @@
 @using WaCollaborative.Frontend.Helpers
 @using MudBlazor
 @using WaCollaborative.Frontend.Pages.PortfolioCustomers
-@using WaCollaborative.Frontend.Pages.PortfolioCustomerProducts
+@using WaCollaborative.Frontend.Pages.PortfolioProducts
