--- a/WaCollaborative/WaCollaborative.Frontend/Pages/PortfolioProducts/PortfolioProductCreate.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/PortfolioProducts/PortfolioProductCreate.razor
@@ -1,27 +1,27 @@
-﻿@page "/portfoliocustomerproducts/create/{PortfolioCustomerId:int}"
+﻿@page "/portfolioproducts/create/{PortfolioId:int}"
 @attribute [Authorize(Roles = "Planner")]
 @inject NavigationManager navigationManager
 @inject IRepository repository
 @inject SweetAlertService sweetAlertService
 
-<h3>Agregar Producto</h3>
+<h4>Agregar producto al portafolio</h4>
 
-<PortfolioCustomerProductForm @ref="portfolioCustomerProductForm" PortfolioCustomerProduct="portfolioCustomerProduct" OnValidSubmit="CreateAsync" ReturnAction="Return" />
+<PortfolioProductForm @ref="portfolioProductForm" PortfolioProduct="portfolioProduct" OnValidSubmit="CreateAsync" ReturnAction="Return" />
 
 @code {
-    private PortfolioCustomerProduct portfolioCustomerProduct = new();
-    private PortfolioCustomerProductForm? portfolioCustomerProductForm;
+    private PortfolioProduct portfolioProduct = new();
+    private PortfolioProductForm? portfolioProductForm;
 
     [CascadingParameter]
     BlazoredModalInstance BlazoredModal { get; set; } = default!;
 
     [Parameter]
-    public int PortfolioCustomerId { get; set; }
+    public int PortfolioId { get; set; }
 
     private async Task CreateAsync()
     {
-        portfolioCustomerProduct.PortfolioCustomerId = PortfolioCustomerId;
-        var response = await repository.PostAsync("/api/portfoliocustomerproducts", portfolioCustomerProduct);
+        portfolioProduct.PortfolioId = PortfolioId;
+        var response = await repository.PostAsync("/api/portfolioproducts", portfolioProduct);
         if (response.Error)
         {
             var message = await response.GetErrorMessageAsync();
@@ -44,7 +44,7 @@
 
     private void Return()
     {
-        portfolioCustomerProductForm!.FormPostedSuccessfully = true;
-        navigationManager.NavigateTo($"/portfoliocustomers/details/{PortfolioCustomerId}");
+        portfolioProductForm!.FormPostedSuccessfully = true;
+        navigationManager.NavigateTo($"/portfolios/productdetails/{PortfolioId}");
     }
 }
